add reinforcement learning

--- a/reinforcement_learning/deep_rl_tf.ipynb
+++ b/reinforcement_learning/deep_rl_tf.ipynb
@@ -48,12 +48,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-22T07:34:59.509759Z",
-     "start_time": "2024-02-22T07:34:59.504185Z"
+     "end_time": "2024-02-24T16:53:21.266814Z",
+     "start_time": "2024-02-24T16:53:16.100946Z"
     }
    },
    "id": "806a576fa484e949",
-   "execution_count": 29
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -97,12 +97,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-22T07:22:13.871224Z",
-     "start_time": "2024-02-22T07:22:13.862998Z"
+     "end_time": "2024-02-24T16:53:21.271459Z",
+     "start_time": "2024-02-24T16:53:21.267325Z"
     }
    },
    "id": "37690641019fb9f1",
-   "execution_count": 16
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -148,8 +148,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-22T07:20:48.380880Z",
-     "start_time": "2024-02-22T07:20:48.378395Z"
+     "end_time": "2024-02-24T16:53:21.275291Z",
+     "start_time": "2024-02-24T16:53:21.270769Z"
     }
    },
    "id": "14ca0d0d8ab08d30",
@@ -175,8 +175,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-22T07:20:48.386110Z",
-     "start_time": "2024-02-22T07:20:48.382073Z"
+     "end_time": "2024-02-24T16:53:21.276568Z",
+     "start_time": "2024-02-24T16:53:21.274247Z"
     }
    },
    "id": "67edd37973a4791f",
@@ -223,8 +223,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-22T07:20:48.387291Z",
-     "start_time": "2024-02-22T07:20:48.385392Z"
+     "end_time": "2024-02-24T16:53:21.280096Z",
+     "start_time": "2024-02-24T16:53:21.277221Z"
     }
    },
    "id": "54da10b16a3ce1fb",
@@ -280,8 +280,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-22T07:20:48.391453Z",
-     "start_time": "2024-02-22T07:20:48.389220Z"
+     "end_time": "2024-02-24T16:53:21.283792Z",
+     "start_time": "2024-02-24T16:53:21.281196Z"
     }
    },
    "id": "1ef9e3a50de590ef",
@@ -313,8 +313,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-22T07:20:48.396468Z",
-     "start_time": "2024-02-22T07:20:48.392657Z"
+     "end_time": "2024-02-24T16:53:21.287579Z",
+     "start_time": "2024-02-24T16:53:21.283767Z"
     }
    },
    "id": "4f064699059bead",
@@ -343,8 +343,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-22T07:20:48.416362Z",
-     "start_time": "2024-02-22T07:20:48.395662Z"
+     "end_time": "2024-02-24T16:53:21.305161Z",
+     "start_time": "2024-02-24T16:53:21.287045Z"
     }
    },
    "id": "200ed199ea90bf4c",
@@ -376,8 +376,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-22T07:20:48.416849Z",
-     "start_time": "2024-02-22T07:20:48.399354Z"
+     "end_time": "2024-02-24T16:53:21.305616Z",
+     "start_time": "2024-02-24T16:53:21.290393Z"
     }
    },
    "id": "5106ddc678c8b50b",
@@ -428,8 +428,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-22T07:20:48.952608Z",
-     "start_time": "2024-02-22T07:20:48.403706Z"
+     "end_time": "2024-02-24T16:53:22.257708Z",
+     "start_time": "2024-02-24T16:53:21.294693Z"
     }
    },
    "id": "b09a596824034f60",
@@ -486,8 +486,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-22T07:20:48.953994Z",
-     "start_time": "2024-02-22T07:20:48.951827Z"
+     "end_time": "2024-02-24T16:53:22.261803Z",
+     "start_time": "2024-02-24T16:53:22.257868Z"
     }
    },
    "id": "39fd453633768827",
@@ -544,8 +544,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-22T07:20:49.314756Z",
-     "start_time": "2024-02-22T07:20:48.955023Z"
+     "end_time": "2024-02-24T16:53:22.640398Z",
+     "start_time": "2024-02-24T16:53:22.261210Z"
     }
    },
    "id": "c245e79975bcb556",
@@ -576,8 +576,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-22T07:20:49.319498Z",
-     "start_time": "2024-02-22T07:20:49.315726Z"
+     "end_time": "2024-02-24T16:53:22.640944Z",
+     "start_time": "2024-02-24T16:53:22.638295Z"
     }
    },
    "id": "c2669a1ef7b46129",
@@ -605,7 +605,7 @@
     "      self.inventory = []\n",
     "      self.model_name = model_name\n",
     "      \n",
-    "      self.gammsa = 0.95\n",
+    "      self.gamma = 0.95\n",
     "      self.epsilon = 1.0\n",
     "      self.epsilon_final = 0.01\n",
     "      self.epsilon_decay = 0.995\n",
@@ -647,12 +647,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-22T07:34:54.664907Z",
-     "start_time": "2024-02-22T07:34:54.656192Z"
+     "end_time": "2024-02-24T16:53:22.647682Z",
+     "start_time": "2024-02-24T16:53:22.644242Z"
     }
    },
    "id": "58c23c8e7d02a1a8",
-   "execution_count": 27
+   "execution_count": 14
   },
   {
    "cell_type": "markdown",
@@ -679,17 +679,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_3\"\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " dense_8 (Dense)             (None, 32)                352       \n",
+      " dense (Dense)               (None, 32)                352       \n",
       "                                                                 \n",
-      " dense_9 (Dense)             (None, 64)                2112      \n",
+      " dense_1 (Dense)             (None, 64)                2112      \n",
       "                                                                 \n",
-      " dense_10 (Dense)            (None, 128)               8320      \n",
+      " dense_2 (Dense)             (None, 128)               8320      \n",
       "                                                                 \n",
-      " dense_11 (Dense)            (None, 3)                 387       \n",
+      " dense_3 (Dense)             (None, 3)                 387       \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 11171 (43.64 KB)\n",
@@ -707,25 +707,184 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-22T07:35:04.010514Z",
-     "start_time": "2024-02-22T07:35:03.971839Z"
+     "end_time": "2024-02-24T16:53:22.710172Z",
+     "start_time": "2024-02-24T16:53:22.647690Z"
     }
    },
    "id": "a8a9684fd1e5589a",
-   "execution_count": 30
+   "execution_count": 15
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Defining a Training Loop\n",
+    "\n",
+    "Now we need to train our model, which we're going to do with a `for` loop that will iterate through all of the `episodes`.\n",
+    "\n",
+    "- Next we want to print out the current episode\n",
+    "- We then need to define our initial state with `state_creator`\n",
+    "- Then we define 2 variables so that we can keep track of `total_profit` and we set our inventory to 0 at the beginning of an episode with `trader.inventory = []`\n",
+    "- Next we define our timestep (1 timestep is 1 day) with a for loop, which represents how many samples we have. To do this we need to define our `action`, `next_state`, and `reward`.\n",
+    "- Then we want to update our `inventory` based on the given `action`\n",
+    "- Based on the actions we can calculate our `reward` and update the `total_profit`\n",
+    "- We then need to check if this is the last sample in our dataset\n",
+    "- Next we need to append all of the data to our trader's experience replay buffer with `trader.memory.append()`\n",
+    "- We then change the state to the `next_state` so we can iterate through the whole `episode`\n",
+    "- Finally, we want to print out the `total_profit` if `done = True` and add print statements to when we buy or sell and how what the profit is\n",
+    "There are two more things to do before starting the training process:\n",
+    "\n",
+    "- We need to check if we have more information in our `memory` than our `batch_size`. If that is true we call `trader.batch_train` and pass in the `batch_size` argument\n",
+    "- We're then going to check if the number of episodes is divisible by 10, and if that is the case we're going to save the model with `trader.model.save()` in an H5 file"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "ca0d503581304a4a"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/_n/nybmwjg90rxfzcynss3bqkr80000gp/T/ipykernel_52505/2141800173.py:7: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  window_data = - starting_id * [data[0]] + list(data[0:timestep+1])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode: 1/1000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/10889 [00:00<?, ?it/s]/var/folders/_n/nybmwjg90rxfzcynss3bqkr80000gp/T/ipykernel_52505/640152755.py:18: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  trader.inventory.append(data[t])\n",
+      "/var/folders/_n/nybmwjg90rxfzcynss3bqkr80000gp/T/ipykernel_52505/640152755.py:19: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  print(\"AI Trader bought: \", stocks_price_format(data[t]))\n",
+      "/var/folders/_n/nybmwjg90rxfzcynss3bqkr80000gp/T/ipykernel_52505/640152755.py:24: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  reward = max(data[t] - buy_price, 0)\n",
+      "/var/folders/_n/nybmwjg90rxfzcynss3bqkr80000gp/T/ipykernel_52505/640152755.py:25: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  total_profit += data[t] - buy_price\n",
+      "/var/folders/_n/nybmwjg90rxfzcynss3bqkr80000gp/T/ipykernel_52505/640152755.py:26: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  print(\"AI Trader sold: \", stocks_price_format(data[t]), \" Profit: \" + stocks_price_format(data[t] - buy_price) )\n",
+      "/var/folders/_n/nybmwjg90rxfzcynss3bqkr80000gp/T/ipykernel_52505/2141800173.py:11: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  state.append(sigmoid(window_data[i+1] - window_data[i]))\n",
+      "  0%|          | 32/10889 [00:00<00:01, 7329.10it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AI Trader bought:  $ 0.137835\n",
+      "AI Trader sold:  $ 0.145089  Profit: $ 0.007254\n",
+      "AI Trader bought:  $ 0.160714\n",
+      "AI Trader sold:  $ 0.152344  Profit: - $ 0.008370\n",
+      "AI Trader bought:  $ 0.154018\n",
+      "AI Trader bought:  $ 0.150670\n",
+      "AI Trader sold:  $ 0.137835  Profit: - $ 0.016183\n",
+      "AI Trader sold:  $ 0.141183  Profit: - $ 0.009487\n",
+      "AI Trader bought:  $ 0.136161\n",
+      "AI Trader sold:  $ 0.136719  Profit: $ 0.000558\n",
+      "AI Trader bought:  $ 0.145089\n",
+      "AI Trader bought:  $ 0.146763\n",
+      "AI Trader bought:  $ 0.142857\n",
+      "AI Trader bought:  $ 0.138393\n",
+      "AI Trader sold:  $ 0.133371  Profit: - $ 0.011718\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'AI_Trader' object has no attribute 'gamma'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[16], line 43\u001B[0m\n\u001B[1;32m     40\u001B[0m     \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m########################\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m     42\u001B[0m   \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mlen\u001B[39m(trader\u001B[38;5;241m.\u001B[39mmemory) \u001B[38;5;241m>\u001B[39m batch_size:\n\u001B[0;32m---> 43\u001B[0m     \u001B[43mtrader\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mbatch_train\u001B[49m\u001B[43m(\u001B[49m\u001B[43mbatch_size\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     45\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m episode \u001B[38;5;241m%\u001B[39m \u001B[38;5;241m10\u001B[39m \u001B[38;5;241m==\u001B[39m \u001B[38;5;241m0\u001B[39m:\n\u001B[1;32m     46\u001B[0m   trader\u001B[38;5;241m.\u001B[39mmodel\u001B[38;5;241m.\u001B[39msave(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mai_trader_\u001B[39m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[38;5;124m.h5\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;241m.\u001B[39mformat(episode))\n",
+      "Cell \u001B[0;32mIn[14], line 40\u001B[0m, in \u001B[0;36mAI_Trader.batch_train\u001B[0;34m(self, batch_size)\u001B[0m\n\u001B[1;32m     38\u001B[0m reward \u001B[38;5;241m=\u001B[39m reward\n\u001B[1;32m     39\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m done:\n\u001B[0;32m---> 40\u001B[0m     reward \u001B[38;5;241m=\u001B[39m reward \u001B[38;5;241m+\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mgamma\u001B[49m \u001B[38;5;241m*\u001B[39m np\u001B[38;5;241m.\u001B[39mamax(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mmodel\u001B[38;5;241m.\u001B[39mpredict(next_state)[\u001B[38;5;241m0\u001B[39m])\n\u001B[1;32m     41\u001B[0m target \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mmodel\u001B[38;5;241m.\u001B[39mpredict(state)\n\u001B[1;32m     42\u001B[0m target[\u001B[38;5;241m0\u001B[39m][action] \u001B[38;5;241m=\u001B[39m reward\n",
+      "\u001B[0;31mAttributeError\u001B[0m: 'AI_Trader' object has no attribute 'gamma'"
+     ]
+    }
+   ],
+   "source": [
+    "for episode in range(1, episodes + 1):\n",
+    "  \n",
+    "  print(\"Episode: {}/{}\".format(episode, episodes))\n",
+    "  \n",
+    "  state = state_creator(data, 0, window_size + 1)\n",
+    "  \n",
+    "  total_profit = 0\n",
+    "  trader.inventory = []\n",
+    "  \n",
+    "  for t in tqdm(range(data_samples)):\n",
+    "    \n",
+    "    action = trader.trade(state)\n",
+    "    \n",
+    "    next_state = state_creator(data, t+1, window_size + 1)\n",
+    "    reward = 0\n",
+    "    \n",
+    "    if action == 1: #Buying\n",
+    "      trader.inventory.append(data[t])\n",
+    "      print(\"AI Trader bought: \", stocks_price_format(data[t]))\n",
+    "      \n",
+    "    elif action == 2 and len(trader.inventory) > 0: #Selling\n",
+    "      buy_price = trader.inventory.pop(0)\n",
+    "      \n",
+    "      reward = max(data[t] - buy_price, 0)\n",
+    "      total_profit += data[t] - buy_price\n",
+    "      print(\"AI Trader sold: \", stocks_price_format(data[t]), \" Profit: \" + stocks_price_format(data[t] - buy_price) )\n",
+    "      \n",
+    "    if t == data_samples - 1:\n",
+    "      done = True\n",
+    "    else:\n",
+    "      done = False\n",
+    "      \n",
+    "    trader.memory.append((state, action, reward, next_state, done))\n",
+    "    \n",
+    "    state = next_state\n",
+    "    \n",
+    "    if done:\n",
+    "      print(\"########################\")\n",
+    "      print(\"TOTAL PROFIT: {}\".format(total_profit))\n",
+    "      print(\"########################\")\n",
+    "    \n",
+    "    if len(trader.memory) > batch_size:\n",
+    "      trader.batch_train(batch_size)\n",
+    "      \n",
+    "  if episode % 10 == 0:\n",
+    "    trader.model.save(\"ai_trader_{}.h5\".format(episode))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-24T16:58:55.166633Z",
+     "start_time": "2024-02-24T16:58:54.845122Z"
+    }
+   },
+   "id": "926099ef6452aa05",
+   "execution_count": 16
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-02-22T07:20:49.584574Z",
-     "start_time": "2024-02-22T07:20:49.583724Z"
-    }
+    "collapsed": false
    },
-   "id": "310b6a6dd80e34d6"
+   "id": "a32056cd157891e3"
   }
  ],
  "metadata": {
