adjust reward for losses

--- a/reinforcement_learning/deep_rl_tf.ipynb
+++ b/reinforcement_learning/deep_rl_tf.ipynb
@@ -636,7 +636,7 @@
     "            batch.append(self.memory[i])\n",
     "            \n",
     "        for state, action, reward, next_state, done in batch:\n",
-    "            reward = reward\n",
+    "            # reward = reward\n",
     "            if not done:\n",
     "                reward = reward + self.gamma * np.amax(self.model.predict(next_state, verbose=0)[0])\n",
     "            target = self.model.predict(state, verbose=0)\n",
@@ -2479,7 +2479,12 @@
     "    elif action == 2 and len(trader.inventory) > 0: #Selling\n",
     "      buy_price = trader.inventory.pop(0)\n",
     "      \n",
-    "      reward = max(data[t] - buy_price, 0)\n",
+    "      profit = data[t] - buy_price\n",
+    "      reward = max(profit, 0)\n",
+    "      if profit >= 0:\n",
+    "          reward = profit\n",
+    "      else: # Penalize losses\n",
+    "        reward = profit # reward is a negative value proportional to the loss\n",
     "      total_profit += data[t] - buy_price\n",
     "      print(\"AI Trader sold: \", stocks_price_format(data[t]), \" Profit: \" + stocks_price_format(data[t] - buy_price) )\n",
     "      \n",
