update train code

--- a/reinforcement_learning/deep_rl_tf.ipynb
+++ b/reinforcement_learning/deep_rl_tf.ipynb
@@ -612,6 +612,8 @@
     "      self.model = self.model_builder()\n",
     "        \n",
     "    def model_builder(self):\n",
+    "        \n",
+    "        # TODO: add LSTM model\n",
     "        model = Sequential()\n",
     "      \n",
     "        model.add(Dense(units=32, activation='relu', input_dim=self.state_size))\n",
